name:                crdt-todomvc
version:             0.1.0.0
synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Adriaan Leijnse
maintainer:           
-- copyright:
-- category:            Game
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable todomvc
  main-is:             Main.hs
  --  other-modules:
  -- other-extensions:    
  ghc-options:  -threaded -rtsopts "-with-rtsopts=-N" -dynamic -Wall
  build-depends:       MonadRandom
                     , base
                     , containers
                     , ghcjs-dom
                     , data-default
                     , cereal
                     , digest
                     , jsaddle
                     , lattices
                     , lens
                     , memory
                     , mtl
                     , random
                     , reflex
                     , reflex-dom
                     , text
                     , transformers
                     , profunctors
                     , jsaddle-dom
  hs-source-dirs:      src
  default-language:    Haskell2010
